# Veritas

./: CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
src/: scoring.py
