[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veritas-ai-audit"
version = "0.1.0"
description = "An open-source AI auditing toolkit for source-data triangulation and logical coherence analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Alexis M. Adams", email = "axiomhive@proton.me"}
]
maintainers = [
    {name = "Alexis M. Adams", email = "axiomhive@proton.me"}
]
keywords = [
    "ai",
    "auditing",
    "verification",
    "fact-checking",
    "transparency",
    "coherence-analysis",
    "source-validation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "nltk>=3.8.0",
    "spacy>=3.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0"
]
docs = [
    "sphinx>=6.2.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0"
]
visualization = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "networkx>=3.1.0",
    "plotly>=5.14.0"
]

[project.urls]
Homepage = "https://github.com/AXI0MH1VE/Veritas"
Documentation = "https://github.com/AXI0MH1VE/Veritas/wiki"
Repository = "https://github.com/AXI0MH1VE/Veritas"
"Bug Tracker" = "https://github.com/AXI0MH1VE/Veritas/issues"
Changelog = "https://github.com/AXI0MH1VE/Veritas/releases"

[project.scripts]
veritas = "veritas.cli:main"

[tool.setuptools]
packages = ["veritas"]

[tool.setuptools.package-data]
veritas = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=veritas --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"

[tool.coverage.run]
branch = true
source = ["veritas"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]
